@@ -179,8 +179,8 @@ binary-indep: build-indep install-indep
 	dh_testroot
 	dh_link -plibrrd-ruby /usr/share/doc/librrd-ruby$(RUBY_DEFAULT_VERS) /usr/share/doc/librrd-ruby
 	dh_link -ppython-rrd /usr/share/doc/python-rrdtool /usr/share/doc/python-rrd
-	dh_installchangelogs -i -Nlibrrd-ruby -Npython-rrd
-	dh_installdocs -i -Nlibrrd-ruby -Npython-rrd -A CONTRIBUTORS
+	dh_installchangelogs -i -Nlibrrd-ruby -Npython-rrd CHANGES
+	dh_installdocs -i -Nlibrrd-ruby -Npython-rrd -A CONTRIBUTORS NEWS
 	dh_link -i -Nlibrrd-ruby -Npython-rrd
 	echo 'rubydefault:Depends=librrd-ruby$(RUBY_DEFAULT_VERS)' >> debian/librrd-ruby.substvars
 	dh_perl -i
@@ -196,7 +196,7 @@ binary-arch: build-arch install-arch
 	dh_testdir
 	dh_testroot
 	dh_installchangelogs -a CHANGES
-	dh_installdocs -a -A CONTRIBUTORS
+	dh_installdocs -a -A CONTRIBUTORS NEWS
 	dh_installdocs -a
 	echo 'tcl:Depends=tcl$(TCL_VERS) | tclsh' >> debian/rrdtool-tcl.substvars
 	dh_pysupport -ppython-rrdtool
