@@ -13,6 +13,8 @@ rrdtool (1.2.28-1) UNRELEASED; urgency=low
       the RRA row count in rrdcreate (Closes: #428780).
   * debian/librrd2.symbols:
     - Added the private symbol "rra_random_row@Base 1.2.28-1".
+  * debian/rules:
+    - Install "NEWS" and "CHANGES" into all packages.
 
   [ Bernd Zeimetz ]
   * debian/rules:
@@ -22,7 +24,7 @@ rrdtool (1.2.28-1) UNRELEASED; urgency=low
   * debian/patches/implicit-decl-fix:
     - Patching the implicit declaration in rrd_update.c in a nicer way.
 
- -- Sebastian Harl <sh@tokkee.org>  Wed, 23 Jul 2008 20:58:21 +0200
+ -- Sebastian Harl <sh@tokkee.org>  Wed, 23 Jul 2008 21:01:04 +0200
 
 rrdtool (1.2.27-2) unstable; urgency=low
 
